// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField Snapshots grow 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 24px;
}

.emotion-0 {
  display: block;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      grow={true}
      type="text"
    />
  </div>
</div>
`;

exports[`FormField Snapshots grow with left label 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 24px;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      grow={true}
      type="text"
    />
  </div>
</div>
`;

exports[`FormField Snapshots left label 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 24px;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`FormField Snapshots renders as expected 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 24px;
}

.emotion-0 {
  display: inline-block;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`FormField Snapshots renders required marking 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 24px;
}

.emotion-0 {
  display: inline-block;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      type="text"
    />
  </div>
</div>
`;
